last commit friday

--- a/src/main/resources/pdf.properties
+++ b/src/main/resources/pdf.properties
@@ -5,5 +5,11 @@ last_name=نام خانوادگی:
 national_code=کد ملی:
 tracking_code=شماره ی رهگیری:
 fatherName=نام ‍بدر
+birth_crtificate_no = شماره شناسنامه
+birt_date= تاریخ تولد
+birth_place = محل تولد
+gender = جنسیت
+dependants_header = مشخصات فرزندان/افراد تحت تکفل
+
 
 spouses_header = مشخصات همسر متقاضی
