--- a/src/main/resources/pdf.properties
+++ b/src/main/resources/pdf.properties
@@ -6,10 +6,15 @@ national_code=کد ملی:
 tracking_code=شماره ی رهگیری:
 fatherName=نام ‍بدر
 birth_crtificate_no = شماره شناسنامه
-birt_date= تاریخ تولد
+birth_date= تاریخ تولد
 birth_place = محل تولد
 gender = جنسیت
 dependants_header = مشخصات فرزندان/افراد تحت تکفل
 
 
 spouses_header = مشخصات همسر متقاضی
+job = شغل
+address= آدرس
+existance_place = محل سکونت
+mobile_no = تلفن همراه
+dependants_number = تعداد افراد تحت تکفل
