--- a/src/main/resources/pdf.properties
+++ b/src/main/resources/pdf.properties
@@ -1,20 +1,62 @@
-header=به نام خدا
 applicants_header=مشخصات متقاضی
 name=نام:
 last_name=نام خانوادگی:
 national_code=کد ملی:
-tracking_code=شماره ی رهگیری:
-fatherName=نام ‍بدر
-birth_crtificate_no = شماره شناسنامه
-birth_date= تاریخ تولد
-birth_place = محل تولد
-gender = جنسیت
-dependants_header = مشخصات فرزندان/افراد تحت تکفل
+fatherName=نام ‍بدر:
+birth_certificate_no= شماره شناسنامه:
+birth_date= تاریخ تولد:
+birth_place= محل تولد:
+brief= خلاصه پرونده متقاضی طرح اقدام ملی
+gender= جنسیت:
+dependants_header= مشخصات فرزندان/افراد تحت تکفل
+spouses_header= مشخصات همسر متقاضی
+job= شغل:
+address=آدرس:
+male= مرد:
+marital_status= وضعیت تاهل:
+physical_status= وضعیت جسمانی:
+female=زن
+single= مجرد
+married= متاهل
+healthy= سالم
+disabled=معلول
+existance_place= محل سکونت:
+mobile_no= تلفن همراه:
+dependants_number= تعداد افراد تحت تکفل:
+first_line_text= ۱.آگاهی از طرح اقدام ملی و مطالعه شرایط و ضوابط طرح
+second_line= ۲.اطلاع از شرایط و ضوابط فاقدین مسکن و اقرار به دارا بودن شرایط آن
+third_line= ۳.دارا بودن سابقه سکونت درپنج سال اخیر در شهر مورد درخواست طرح اقدام ملی
+forth_line=۴.توانایی سپرده گذاری (حداقل 300 میلیون ریال) در بانک مسکن و پرداخت اقساط ماهانه تسهیلات دریافتی و تامین مابه التفاوت ساخت مطابق با شرایط طرح
+fifth_line= ۵.رعایت اصول و ضوابط مندرج در دستور نقشه و پروانه ساختمانی (سطح اشغال- تراکم ، ....)
+sixth_line= ۶.مراجعه به شرکت های مشاور، مهندسین ذیصلاح برای تهیه نقشه های فنی
+seventh_line= ۷.اجرای ساختمان با مجری ذیصلاح ، پیمانکاران دارای صلاحیت، استادکاران، نیروهای فنی و کارگران ماهر و دارای گواهینامه 
+eighth_line= ۸.انجام بیمه ساختمان (بیمه مسئولیت مدنی و ...)
+nine_line= ۹. توجه به توصیه های فنی مهندس ناظر، مهندس مجری و ناظرین بنیاد مسکن انقلاب اسلامی
+ten_line= ۱۰.اهتمام و تاکید بر اجرای ساختمان با رعایت مقررات ملی ساختمان، از جمله:  کیفیت اجرا ،  مبحث مصرف انرژی، معماری  و زیباسازی 
+eleven_line= ۱۱.پیش بینی های لازم برای ایمنی کارگاه و عملیات و اجرای ساختمان
+twelve_line= ۱۲.عدم به کارگیری اتباع خارجی فاقد پروانه کار معتبر
+thirteen_line=۱۳.اجرای نمای مصوب مطابق نقشه های تایید شده در شهرداری و بهره گیری از مصالح استاندارد و با دوام
+fortheen_line= ۱۴.دریافت گواهی یا اخذ تائیدیه از مراجع ذیربط برای آسانسور، آتش نشانی،پکیج و...
+fiftheen_line= ۱۵.اتمام عملیات ساختمانی در مهلت قانونی مطابق طرح
+sixteen_line= ۱۶.میزان تسهیلات مبلغ 750 میلیون ریال با نرخ سود سالیانه 18% و دوره مشارکت مدنی ساخت دو ساله و باز پرداخت ده ساله
+seventeen_line= ۱۷.متراژ واحدها می بایست بر اساس مقررات و ضوابط طرح اقدام ملی بوده و مالک موظف به رعایت آن می باشد.
+manager_sign= مهر و امضای مدیر شعبه
+expert_sign= امضای کارشناس شعبه
+applicant_sign= امضا و اثر انگشت متقاضی
+promises= تعهدات متقاضی
+header=به نام خدا
 
+promise_first = اینجانب
+promise_second= متولد
+promise_third=وبه شماره ی شناسنامه 
+promise_forth= دارای کد ملی 
+promise_fifth = ساکن شهر
+promise_sixth= صادره از
+promise_seventh= اقرار نمودم
 
-spouses_header = مشخصات همسر متقاضی
-job = شغل
-address= آدرس
-existance_place = محل سکونت
-mobile_no = تلفن همراه
-dependants_number = تعداد افراد تحت تکفل
+promise_first_line = اینجانب و افراد تحت تکفل خود از تاريخ 22/11/57 از هيچ يك از امکانات دولتي يا امكانات نهادهاي عمومي غير دولتي مربوط به تأمين مسكن شامل زمين، واحد مسكوني و يا تسهيلات يارانه دار خريد و يا ساخت واحد مسكوني استفاده نكرده ایم.
+promise_second_line = اینجانب و افراد تحت تکفل خود از تاريخ 1/4/84  ، به استثناء حدود زمین معرفی شده جهت برخورداری از تسهیلات طرح اقدام ملی فاقد هر گونه زمین و مسکن می باشیم
+promise_third_line =  در صورت احراز هر یک از موارد پیش گفته ضمن استرداد زمین و اصل و سود تسهيلات دريافتي مطابق ضوابط بانک عامل ملزم به جبران خسارات وارده می باشم
+promise_forth_line =  مفاد اقرار فوق فقط در نفس اقرار موثر و معتبر است
+#########################################################################################################
+
